# shader_sample

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main
.cache/clangd/index/: canvas.cpp.430F9E6058777A44.idx  canvas.cpp.9ADD51972635E0AA.idx  canvas.hpp.9BD52C0C66665979.idx  canvas.hpp.A7F222A1478055BA.idx  engine.cpp.352597E9C48D98A0.idx  engine.cpp.F15EABB701173035.idx  engine.hpp.07F8603ACA3E4235.idx  engine.hpp.C8626158A542161F.idx  gfx.h.111A469371F90C93.idx  gfx.h.9DA6DAD8AAE6AEAF.idx  gfx.hpp.4468FE5BA449C14C.idx  gfx.hpp.D8301E435710B84E.idx  main.cpp.9FF165AEBC8A7A47.idx  main.cpp.D783879177AA1E35.idx  renderer.cpp.A4D6A100013A03F4.idx  renderer.cpp.F2D892B4930AA554.idx  renderer.hpp.88D531394FBD56B1.idx  renderer.hpp.8C6856BA2830C796.idx  shader.cpp.C12BB14FE581E8B6.idx  shader.cpp.F4440D3B5193AB24.idx  shader.hpp.627AB4F106809C35.idx  shader.hpp.DED56CBD1D7BCEDB.idx  timer.cpp.59F650EFADAE6BC7.idx  timer.cpp.85205CA315BC34C0.idx  timer.hpp.681E739FB447A80C.idx  timer.hpp.8E11BA5978AB95A5.idx  types.h.6B29EB90E1D9A04E.idx  types.hpp.9FCADABBBEF1C943.idx  types.hpp.E7FEA5EA81A458D7.idx  util.hpp.36B1826EAE103316.idx  util.hpp.4C77C0896AC1A802.idx  (+12 more)
cmake/: FindSDL2_image.cmake
res/shaders/: 2d.frag  2d.vert
src/: main.cpp
src/core/: engine.cpp  engine.hpp  timer.cpp  timer.hpp
src/gfx/: TODO.md  canvas.cpp  canvas.hpp  gfx.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  triangle.cpp  triangle.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/util/: types.h  types.hpp  util.hpp
